--- a/.github/workflows/trips-CI.yml
+++ b/.github/workflows/trips-CI.yml
@@ -30,4 +30,4 @@ jobs:
         run: go build -v .
 
       - name: Test
-        run: go test -v ./tests/.
+        run: go test ./tripgo -run Unit
