--- a/.github/workflows/trips-CI.yml
+++ b/.github/workflows/trips-CI.yml
@@ -12,9 +12,6 @@ on:
       - apis/trips/**
       - .github/workflows/trips-CI.yml
 
-defaults: # this will likely need to be hinted as the 'cd' command may not work well with go
-  run:
-    working-directory: apis/trips
 
 jobs:
   build_and_test:
@@ -28,6 +25,9 @@ jobs:
 
       - name: Build
         run: go build -v .
+        
+      - name: where am I
+        run: ls
 
       - name: Test
         run: go test ./tripgo -run Unit
