--- a/.github/workflows/trips-CI.yml
+++ b/.github/workflows/trips-CI.yml
@@ -12,6 +12,10 @@ on:
       - apis/trips/**
       - .github/workflows/trips-CI.yml
 
+defaults: # this will likely need to be hinted as the 'cd' command may not work well with go
+  run:
+    working-directory: apis/trips
+
 
 jobs:
   build_and_test:
@@ -30,4 +34,4 @@ jobs:
         run: ls
 
       - name: Test
-        run: go test ./tripgo -run Unit
+        run: go test tripgo -run Unit
