--- a/.github/workflows/trips-CI.yml
+++ b/.github/workflows/trips-CI.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           cd apis/trips
           ls
+          pwd
 
       - name: Test
         run: go test ./tripgo -run Unit
