--- a/.github/workflows/trips-CI.yml
+++ b/.github/workflows/trips-CI.yml
@@ -12,7 +12,9 @@ on:
       - apis/trips/**
       - .github/workflows/trips-CI.yml
 
-
+defaults: # this will likely need to be hinted as the 'cd' command may not work well with go
+  run:
+    working-directory: apis/trips
 
 jobs:
   build_and_test:
@@ -29,7 +31,6 @@ jobs:
         
       - name: where am I
         run: |
-          cd apis/trips
           ls
           pwd
 
