--- a/.github/workflows/user-java-CI.yml
+++ b/.github/workflows/user-java-CI.yml
@@ -28,3 +28,18 @@ jobs:
           java-version: 1.8
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+
+      - uses: actions/github-script@v4
+        if: failure()
+        with:
+          script: |
+            let body = "${{ env.build_name }} Worflow Failure \n ";
+            body += "Build Number: ${{ github.run_number }} \n";
+            body += "Build Log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} \n";
+            body += "SHA: [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }}) \n";
+            await github.issues.create({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            title: "${{ env.build_name }} Workflow ${{ github.run_number }} Failed! ",
+            body: body
+            });
