--- a/.github/workflows/POI-CD.yml
+++ b/.github/workflows/POI-CD.yml
@@ -1,7 +1,7 @@
 name: POI-CD
 on:
   push:
-    branches: [main, ch4]
+    branches: [main, ch5]
     paths:
       - apis/poi/**
       - .github/workflows/POI-CD.yml
@@ -11,6 +11,9 @@ env:
   repository: devopsoh/api-poi
   docker_path: apis/poi/web
   webapp_name: openhackdct2jkx0poi
+  resource_group: openhackdct2jkx0rg
+  staging_url_healthcheck: http://openhackdct2jkx0poi-staging.azurewebsites.net/healthcheck
+  production_url_healthcheck: http://openhackdct2jkx0poi.azurewebsites.net/healthcheck
 
 jobs:
   docker_build_and_push:
@@ -39,7 +42,7 @@ jobs:
             ${{ github.workflow }} Workflow failed for commit ${{github.sha}}
             Build Log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
-  simple_deploy:
+  staging_deploy:
     runs-on: ubuntu-latest
     needs: docker_build_and_push
     steps:
@@ -51,12 +54,84 @@ jobs:
       - name: Azure WebApp
         uses: Azure/webapps-deploy@v2
         with:
+          slot-name: staging
           app-name: ${{ env.webapp_name }}
           images: ${{ env.registry }}/${{ env.repository }}:${{github.run_number}}
 
       - name: Apply App Versioning
         uses: azure/appservice-settings@v1
         with:
+          slot-name: staging
           app-name: ${{ env.webapp_name }}
           mask-inputs: false
           app-settings-json: '[{ "name": "APP_VERSION", "value": "${{github.run_number}}", "slotSetting": false }]'
+
+  validate_staging:
+    runs-on: ubuntu-latest
+    needs: staging_deploy
+    steps:
+      - name: Azure authentication
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS  }}
+
+      - uses: actions/checkout@v2 # needed to get the script
+
+      - name: Run Validation script
+        run: |
+          chmod +x ./.github/build/healthcheck.sh
+          ./.github/build/healthcheck.sh -i ${{ env.staging_url_healthcheck }}
+
+  production_deploy:
+    runs-on: ubuntu-latest
+    needs: staging_deploy
+    steps:
+      - name: Azure authentication
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS  }}
+
+      - name: Swap staging to production
+        run: |
+          az webapp deployment slot swap -n $webapp_name -g $resource_group --slot staging --target-slot production   
+          echo "Promoted staging to production"
+
+  validate_production:
+    runs-on: ubuntu-latest
+    needs: staging_deploy
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Run Validation script
+        run: |
+          chmod +x ./.github/build/healthcheck.sh
+          ./.github/build/healthcheck.sh -i ${{ env.production_url_healthcheck }}
+
+  clean_up:
+    runs-on: ubuntu-latest
+    needs: validate_production
+    steps:
+      - name: Azure authentication
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS  }}
+
+      - name: stop staging slot
+        run: |
+          az webapp stop -g ${{ env.resource_group }} -n ${{ env.webapp_name }} -s staging
+          echo "staging slot stopped"
+
+  restore_previous:
+    runs-on: ubuntu-latest
+    needs: validate_production
+    if: failure()
+    steps:
+      - name: Azure authentication
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS  }}
+
+      - name: restoring previous production slot
+        run: |
+          az webapp deployment slot swap -n $webapp_name -g $resource_group --slot staging --target-slot production
+          echo "restored previous production slot"
