--- a/.github/workflows/POI-CD.yml
+++ b/.github/workflows/POI-CD.yml
@@ -84,7 +84,7 @@ jobs:
 
   production_deploy:
     runs-on: ubuntu-latest
-    needs: staging_deploy
+    needs: validate_staging
     steps:
       - name: Azure authentication
         uses: azure/login@v1
@@ -98,7 +98,7 @@ jobs:
 
   validate_production:
     runs-on: ubuntu-latest
-    needs: staging_deploy
+    needs: production_deploy
     steps:
       - uses: actions/checkout@v2
 
