--- a/.github/workflows/POI-CD.yml
+++ b/.github/workflows/POI-CD.yml
@@ -109,7 +109,7 @@ jobs:
 
   clean_up:
     runs-on: ubuntu-latest
-    needs: validate_production
+    needs: [production_deploy, validate_production]
     steps:
       - name: Azure authentication
         uses: azure/login@v1
@@ -123,8 +123,8 @@ jobs:
 
   restore_previous:
     runs-on: ubuntu-latest
-    needs: validate_production
-    if: failure()
+    needs: [production_deploy, validate_production]
+    if: (needs.production_deploy.status == "success" && needs.validate_production.result == "failure")
     steps:
       - name: Azure authentication
         uses: azure/login@v1
