--- a/.github/workflows/POI-CD.yml
+++ b/.github/workflows/POI-CD.yml
@@ -124,7 +124,7 @@ jobs:
   restore_previous:
     runs-on: ubuntu-latest
     needs: [production_deploy, validate_production]
-    if: always() && (needs.production_deploy.result == "success" && needs.validate_production.result == "failure")
+    if: always() && (needs.validate_production.result == "failure")
     steps:
       - name: Azure authentication
         uses: azure/login@v1
