--- a/.github/workflows/canary-deploy.yml
+++ b/.github/workflows/canary-deploy.yml
@@ -17,7 +17,7 @@ on:
         description: The name of the Azure Web App resource group
       percentage:
         required: true
-        type: int
+        type: number
         description: The percentage of traffic to allow into staging (0-100)
       production_url_healthcheck:
         required: true
