--- a/.github/workflows/canary-deploy.yml
+++ b/.github/workflows/canary-deploy.yml
@@ -3,21 +3,26 @@ name: Allow some traffic into a desired slot
 on:
   workflow_call:
     inputs:
-      slot_name: # The name of the slot to deploy to - e.g. staging
+      slot_name:
         required: true
         type: string
-      webapp_name: # The name of the Azure Web App to deploy to
+        description: The name of the slot to deploy to - e.g. staging
+      webapp_name:
         required: true
         type: string
-      webapp_resource_group: # The name of the Azure Web App resource group
+        description: The name of the Azure Web App to deploy to
+      webapp_resource_group:
         required: true
         type: string
-      percentage: #  The percentage of traffic to allow into staging (0-100)
+        description: The name of the Azure Web App resource group
+      percentage:
         required: true
         type: number
-      production_url_healthcheck: #  The production URL to validate
+        description: The percentage of traffic to allow into staging (0-100)
+      production_url_healthcheck:
         required: true
         type: string
+        description: The production URL to validate
     secrets:
       AZURE_CREDENTIALS:
         required: true
